<resources>
    <string name="app_name">POS App HC</string>
    <string name="action_settings">Settings</string>
    <string name="online_payment">Online Payment</string>
    <string name="home">Home</string>
    <string name="add_product">Add \nProduct</string>
    <string name="text_print_bill">Print Bill</string>
    <string name="skip_item">Skip</string>
    <string name="text_view_bill">View Bill</string>
    <string name="text_product_name">Product Name</string>
    <string name="dummy_price_10000">10,000</string>
    <string name="text_gst_included">GST Included</string>
    <string name="text_gst_excluded">GST Excluded</string>
    <string name="text_product_description">Product Description</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_add_product">Add Product</string>
    <string name="text_payment">Payment</string>
    <string name="text_history">History</string>
    <string name="text_stock">Stock</string>
    <string name="text_search_products">Search Products</string>
    <string name="text_products">Products</string>
    <string name="text_price">Price</string>
    <string name="price_inr">Price</string>
    <string name="text_price_INR">Price(INR)</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="text_estimated_price"><b>%1$d</b> item in cart\n<b>\u20B9 %2$d</b>\nInclusive of all taxes</string>
    <string name="text_heading">Heading</string>
    <string name="dummy_text_coffee">Coffee</string>
    <string name="dummy_text_rs_50_00">Rs 50.00</string>
    <string name="dummy_quantity">100 items</string>
    <string name="dummy_tag_A">A</string>
    <string name="text_item_name">Item Name</string>
    <string name="text_tax_summary">Tax Summary</string>
    <string name="text_net_amount">Net Amount</string>
    <string name="text_balance">Balance</string>
    <string name="text_payment_summmary">Payment Summary</string>
    <string name="text_cash">Cash</string>
    <string name="text_print_preview">Print Preview</string>
    <string name="text_invoice_3_inch">Invoice 3 Inch</string>
    <string name="text_qty">Qty</string>
    <string name="text_total">Total</string>
    <string name="submit_str">Submit</string>
    <string name="text_total_value">Total Value</string>
    <string name="text_online">Online</string>
    <string name="text_connect_printer">Find/Connect Printer</string>
    <string name="network_error">Please check your connection</string>
    <string-array name="payment_modes">
        <item>Cash</item>
        <item>Card</item>
    </string-array>
    <string-array name="product_categories">
        <item>Categories*</item>
        <item>Mobile</item>
        <item>Mobile Accessories</item>
        <item>Home Appliances</item>
    </string-array>
    <string-array name="product_categories_default">
        <item>Categories*</item>

    </string-array>
    <string-array name="product_variant">
        <item>Variant *</item>
        <item> 6GB|64GB</item>
        <item>6GB|128GB</item>
        <item>4GB|128GB</item>
        <item>4GB|64GB</item>
        <item>3GB|64GB</item>
    </string-array>
    <string-array name="wire_ear_phones">
        <item>Connection Type *</item>
        <item> USB</item>
    </string-array>
    <string-array name="television_size">
        <item>Size *</item>
        <item>40"</item>
        <item>45"</item>
        <item>50"</item>
    </string-array>
    <string-array name="refregerator_capacity">
        <item>Capacity</item>
        <item>190 L</item>
        <item>250 L</item>
        <item>300 L</item>
        <item>450 L</item>
    </string-array>
    <string-array name="wire_ear_phones_color">
        <item>Color *</item>
        <item> White </item>
        <item> Black </item>
    </string-array>
    <string-array name="product_sub_categories">
        <item>Sub Categories*</item>
        
    </string-array>
    <string-array name="product_sub_categories_mobile">
        <item>Sub Categories*</item>
        <item>Mobile Phones</item>
        
    </string-array>
    <string-array name="product_sub_categories_mobile_accessories">
        <item>Sub Categories*</item>
        <item>Power Bank</item>
        <item> Wired Ear Phones</item>
        
    </string-array>
    <string-array name="product_sub_categories_home_appliances">
        <item>Sub Categories*</item>
        
        
        <item>Televisions</item>
        <item>Refrigerator</item>

    </string-array>
    <string-array name="product_sub_categories_powerbank_mah">
        <item>Power mAh*</item>
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>

    </string-array>
    <string-array name="camera_pixel">
        <item>Camera Pixel*</item>
        <item>Front Dual Camera</item>
        <item>Selfie Camera</item>
    </string-array>
    <string-array name="mobile_battery">
        <item>Battery</item>
        <item>Lithium ion</item>
    </string-array>
    <string-array name="mobile_warranty">
        <item>Warranty</item>
        <item> 2 Years</item>
        <item> 3 Years</item>
    </string-array>
    <string-array name="product_sub_categories_powerbank_compatible">
        <item>Compatible *</item>
        <item>5V/2A</item>
        <item>9V/2A</item>
        <item>12V/1.5A</item>

    </string-array>
    <string-array name="powerbank_composition">
        <item>Battery Composition</item>
        <item>Lithium Polymer</item>
    </string-array>
    <string-array name="power_bank_cable">
        <item>Power Bank Cable</item>
        <item>Micro USB</item>
        <item>USB</item>
    </string-array>
    <string-array name="color_option">
        <item>Color *</item>
        <item>Red</item>
        <item>Silver</item>
        <item>Black</item>
        <item>White</item>
        <item>Blue</item>
    </string-array>
    <string-array name="star_rate">
        <item>Start Rating *</item>
        <item>1 Star</item>
        <item>2 Star</item>
        <item>3 Star</item>
        <item>4 Star</item>
        <item>5 Star</item>
    </string-array>
    <string-array name="product_type">
        <item>Product Type *</item>
        <item>Store</item>
        <item>Online</item>
    </string-array>
    <string name="brand_name">Brand Name *</string>
    <string-array name="tele_type">
        <item>Type *</item>
        <item>LED</item>
        <item>PLASMA</item>
        <item>LCD</item>
    </string-array>
    <string-array name="refre_type">
        <item>Type *</item>
        <item>Top freezer</item>
        <item>Bottom freezer</item>
    </string-array>
    <string-array name="language_option">
        <item>English</item>
        <item> हिंदी  </item>
    </string-array>
    <string name="text_add_product_success">Product added successfully!</string>
    <string name="text_decrtn_required">Product description required!</string>
    <string name="text_price_req">Product price required!</string>
    <string name="prodct_name_req">Product name required!</string>
    <string name="text_select_category">Please select a category</string>
    <string name="text_quantity_req">Quantity required</string>
    <string name="msg_category_loading_failed">Categories not available, pull to refresh categories</string>
    <string name="msg_product_update_success">Product updated successfully!</string>
    <string name="text_gst">Gst%</string>
    <string name="text_final_price">Final Price</string>
    <string name="text_powered_by_home_credit_india">Powered by Home Credit India \n 1800 121 6660</string>
    <string name="text_address">10A, Dlf Phase 2,\nGurgaon(Haryana) - 122001\nEmail - care@homecredit.co.in</string>
    <string name="str_please_login_to_continue">Please login to continue</string>
    <string name="str_login">LOGIN</string>
    <string name="ptofile_image">Profile Image</string>
    <string name="camera_click">Camera Click</string>
    <string name="personal_information">Personal Informantion</string>
    <string name="merchant">Merchant</string>
    <string name="test_name">Udit Narayan</string>
    <string name="store_name">Store Name</string>
    <string name="store_name_hint">Alpha Store Limited</string>
    <string name="contact_information">Contact Information</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_hint">8010601199</string>
    <string name="verified">Verified</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="language">Language</string>
    <string name="edit">Edit</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="add_product_new">Add Product</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="customer_details">Customer details</string>
    <string name="store">Store</string>
    <string name="product_name">Product Name *</string>
    <string name="quantity">Quantity *</string>
    <string name="description">Description *</string>
    <string name="serial_number">Serial Number</string>
    <string name="gst">GST %</string>
    <string name="add">+</string>
    <string name="reduce">Reduced(Less)    </string>
    <string name="less">(Less)</string>
    <string name="price">Price</string>
    <string name="final_price">Final Price for Customer</string>
    <string name="update">UPDATE</string>
    <string name="unit">Quantity*(Unit)</string>
    <string name="price_gst">Price(Excl.GST)</string>
    <string name="parent_class_name">ParentClassName</string>
    <string name="gst_text">Excl.GST</string>
    <string name="current_stock">Current Stock</string>
    <string name="updated_stock">Updated Stock</string>
    <string name="remove_stock">Remove Stock</string>
    <string name="units">Units</string>
    <string name="store_recount">Store Recount</string>
    <string name="damage">Damage</string>
    <string name="theft">Theft</string>
    <string name="loss">Loss</string>
    <string name="restock_return">Restock Return</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="description_text">Oppo F9 has always put powerful technology
in the hands of those who demand more</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="delete_str">Delete</string>
    <string name="edit_str">Edit</string>
    <string name="_contitue">Continue</string>
    <string name="customer_relation">Customer Relation</string>
    <string name="customer_details_deleted">Customer details deleted.</string>
    <string name="customer_details_added">Customer Added. </string>
    <string name="customer_details_edited">Customer details has been updated.</string>
    <string name="inc_gst">Inc. GST</string>
    <string name="search_customer_hint">Enter phone no / Name</string>
    <string name="search_customer_header">Search Customer</string>
    <string name="add_customer">ADD CUSTOMER</string>
    <string name="add_customer_new">ADD CUSTOMER</string>
    <string name="countinue_str">CONTINUE</string>
    <string name="back_home_str">Back to Home</string>
    <string name="add_customer_first_name">First Name*</string>
    <string name="selectDate">Select Date</string>
    <string name="selectDateRange">Select Date Range</string>
    <string name="paymentMode">Payment Mode</string>
    <string name="today">Today</string>
    <string name="sevenDays">7 DAYS</string>
    <string name="thirtyDays">30 DAYS</string>
    <string name="customDate">CUSTOM</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="applyFilter">Apply</string>
    <string name="downloadOption">Choose Your Download Option</string>
    <string name="downloadMessage">Only displayed result will be downloaded or sent</string>
    <string name="downloadPDF">Download As PDF</string>
    <string name="sendMail">Send Mail</string>
</resources>