<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_color"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_item_name"
        android:textColor="@color/black_color"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_item_total"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="@string/text_total"
        android:textColor="@color/black_color"
        android:textSize="16dp" />


    <TextView
        android:id="@+id/tv_item_qty"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/tv_item_total"
        android:gravity="center"
        android:text="@string/text_qty"
        android:textColor="@color/black_color"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/tv_item_qty"
        android:gravity="center"
        android:text="@string/text_price"
        android:textColor="@color/black_color"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_item_gst"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/tv_item_price"
        android:gravity="center"
        android:text="@string/text_gst"
        android:textColor="@color/black_color"
        android:textSize="16dp" />


</RelativeLayout>