<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:paddingBottom="15dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="15dp">

    <TextView
        android:id="@+id/tv_product_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/circle_shape"
        android:padding="15dp"
        android:text="@string/dummy_tag_A"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_product_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/tv_product_tag">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_product_name"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_quantity_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_product_name"
            android:text="@string/dummy_quantity"
            android:textColor="#000000" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/rl_product_tag">

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/dummy_text_rs_50_00"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_gst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/product_price"
            android:layout_marginLeft="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/text_gst_included"
            android:textColor="#000000" />
    </RelativeLayout>
</RelativeLayout>