<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloadOption"
            android:background="@drawable/circle"
            android:layout_gravity="right"
            android:src="@drawable/ic_close"/>
        <TextView
            android:id="@+id/tvCloseDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/downloadOption"
            android:padding="10sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black_color" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloadMessage"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvDownloadPDFDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloadPDF"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10sp"
            android:textColor="@color/colorPrimary"
            android:padding="10sp"
            android:background="@drawable/custom_border_hover"/>
        <TextView
            android:id="@+id/tvSendMailDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendMail"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10sp"
            android:textColor="@color/white_color"
            android:padding="10sp"
            android:background="@color/colorPrimary"/>


    </LinearLayout>
</RelativeLayout>
