<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".billdesk.activity.TransactionHistoryActivityNew"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:padding="10sp"
           android:textSize="18sp"
           android:text="@string/selectDate"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvTodayFilter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:padding="10sp"
                android:background="@drawable/custom_border_hover"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/today"/>
            <TextView
                android:id="@+id/tvSevenDaysFilter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="5sp"
                android:textStyle="bold"
                android:padding="10sp"
                android:background="@drawable/custom_border_hover"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/sevenDays"/>
            <TextView
                android:id="@+id/tvThirtyDaysFilter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="5sp"
                android:textStyle="bold"
                android:padding="10sp"
                android:background="@drawable/custom_border_hover"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/thirtyDays"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvCustomDateFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:textStyle="bold"
            android:padding="10sp"
            android:background="@drawable/custom_border_hover"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:text="@string/customDate"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10sp"
            android:background="@color/color_f1f2f2"
            android:layout_marginTop="20sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="10sp"
                android:text="@string/selectDateRange"/>
            <LinearLayout
                android:id="@+id/llCustomDateFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvFromDateFilter"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:padding="10sp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/custom_border"
                    android:text="10/10/2018"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5sp"
                    android:textStyle="bold"
                    android:padding="10sp"
                    android:text="To"/>
                <TextView
                    android:id="@+id/tvToDateFilter"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5sp"
                    android:textStyle="bold"
                    android:padding="10sp"
                    android:background="@drawable/custom_border"
                    android:gravity="center_horizontal"
                    android:text="15/10/2018"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:layout_marginTop="20sp"
            android:background="#abc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="10sp"
            android:layout_marginTop="20sp"
            android:textSize="18sp"
            android:text="@string/paymentMode"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCash"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:padding="10sp"
                android:background="@drawable/custom_border_hover"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/cash"/>
            <Button
                android:id="@+id/btnCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:textStyle="bold"
                android:padding="10sp"
                android:background="@drawable/custom_border_hover"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/card"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:layout_marginTop="20sp"
            android:background="#abc"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_shap"
        android:textColor="@color/white_color"
        android:layout_marginTop="20dp"
        android:text="@string/applyFilter"/>
</LinearLayout>