<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:paddingBottom="15dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="15dp"
    android:layout_margin="2sp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivProductImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:src="@android:drawable/ic_menu_gallery"
        android:padding="15dp"
        android:layout_margin="10sp"
        android:text="@string/dummy_tag_A"
        android:textColor="#FFFFFF"
        android:background="@drawable/card_back"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_product_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/ivProductImage">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_product_name"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAvailableItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_product_name"
            android:textColor="#000000"
            android:textStyle="italic"
            android:layout_marginLeft="5sp"
            android:layout_toRightOf="@id/tvProductName"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvProductName"
            android:text="@string/dummy_quantity"
            android:textColor="#000000" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/rl_product_tag">

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/dummy_text_rs_50_00"
            android:textColor="#000000"
            android:textStyle="bold" />

    </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>