<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/custom_toolbar_with_right_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal"
        android:background="@color/white_color"
        android:elevation="4dp"
        android:padding="8dp"
        android:weightSum="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_rect_gray"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/category"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:drawableRight="@drawable/ic_icon_search"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_rect_gray"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/text_search_products"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_red_rounded"
            android:textColor="@color/white_color"
            android:text="@string/_contitue"/>
    </LinearLayout>
</LinearLayout>